# new-keyglide

./: Cargo.toml  Dockerfile
.git-crypt/keys/default/0/: 7FB7FD3FC67E49A04E3377A589586ED676B2F4BE.gpg
.github/: dependabot.yml
.github/workflows/: build-and-publish-backend-service.yml  delete-review-package.yml
backend/: Cargo.toml
backend/assets/: goal.rs  start.rs
backend/src/: app.rs  constants.rs  lobby.rs  main.rs  player.rs  routes.rs
backend/src/app/: message.rs
backend/src/routes/: clients.rs  lobbies.rs  play.rs  players.rs
client/: Cargo.toml  config.toml
client/src/: app.rs  args.rs  audio.rs  config.rs  constants.rs  main.rs  schema.rs  ui.rs
client/src/config/: audio.rs  general.rs  key_bindings.rs
client/src/schema/: chat.rs  connection.rs  editor.rs  encryption.rs  focused_component.rs  goal.rs  join.rs  lobby.rs  offline.rs  tab.rs  terminal.rs
client/src/ui/: exit.rs  header.rs  home.rs  logs.rs  offline.rs  play.rs
client/src/ui/play/: chat.rs  editor.rs  goal.rs  join.rs  lobby.rs
client_derive/: Cargo.toml
client_derive/src/: lib.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
infrastructure/: hcloud.tf  user-data.yml  variables.tf
infrastructure/review/: hcloud.tf  state.tf  user-data.yml
secrets/: github_delete_packages_token  github_personal_access_token  hcloud_token  hetzner_s3_access_key  hetzner_s3_secret_key  review_ssh_key  review_ssh_key.pub
