[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
tokio = { version = "1.38.1", features = ["full"] }
warp = "0.3.7"
common = { path = "../common" }
serde_json = "1.0.120"
tokio-tungstenite = "0.23.1"
anyhow = "1.0.86"
uuid = { version = "1.10.0", features = ["v4"] }
urlencoding = "2.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
