[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
common = { path = "../common", features = ["backend"] }
fake = "2.9.2"
futures-util = "0.3.30"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
