[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
audio = ["dep:rodio"]

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
chrono = { workspace = true }
clap = { version = "4.5.18", features = ["derive"] }
client_derive = { path = "../client_derive" }
common = { path = "../common", features = ["client"] }
crossterm = { version = "0.28.1", features = ["serde"] }
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
notify = "6.1.1"
portable-pty = "0.8.1"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["serde", "unstable"] }
reqwest = { version = "0.12.7", features = ["json"] }
rodio = { version = "0.19.0", optional = true }
serde = { workspace = true }
serde_json = "1.0.128"
strum = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
toml = "0.8.19"
tui-logger = { version = "0.13.2", features = ["crossterm"] }
tui-term = "0.1.13"
uuid = "1.10.0"
