[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
backend = ["dep:fake", "dep:tokio"]
client = ["dep:tokio-tungstenite"]

[dependencies]
fake = { version = "2.9.2", optional = true }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.23.1", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
