[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
client = ["dep:tokio-tungstenite"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.124"
strum = { workspace = true }
tokio-tungstenite = { version = "0.23.1", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
